tests/typechecker/should_fail/type_annotations_15.csp
f :: (M::x =>* Event) -> a
f(x) = error("Whatever")
